--- a/pages/story.html
+++ b/pages/story.html
@@ -1,1 +1,5 @@
-<%- include('./layout/default', { title: '品牌故事', content: 'contents/story' }) %>
+<%- include('./layout/default', {
+  title: '品牌故事',
+  content: 'contents/story',
+  showInfoBar: true
+}); %>
