--- a/products.html
+++ b/products.html
@@ -4,47 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>所有商品｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-ByKNHORd.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BKNN9bkA.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-Wd0I3DXt.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-DUKhlulM.css">
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="navbar">
-  <div class="container d-flex justify-between items-center py-4">
-    <div class="d-flex items-center gap-9">
-      <a href="index.html">
-        <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
-      </a>
+    <nav class="container d-flex justify-between items-center py-4 xs:py-3">
+  <div class="d-flex items-center gap-9">
+    <a href="index.html">
+      <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
+    </a>
 
-      <ul class="pages">
-        <li>
-          <a href="products.html">商品列表</a>
-        </li>
-        <li>
-          <a href="story.html">品牌故事</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+      <li>
+        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+      </li>
+      <li>
+        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+      </li>
+    </ul>
+  </div>
 
-    <div>
-      <a href="javascript:;" class="p-3">
-        <i class="bi bi-person fs-6"></i>
-      </a>
-    </div>
+  <div>
+    <a href="login.html" class="p-3">
+      <i class="bi bi-person fs-6"></i>
+    </a>
   </div>
 </nav>
 
     <!-- page content -->
     <main class="products-main container">
-  <nav class="mb-6">
+  <nav class="mb-6 xs:mb-3">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+      <li class="breadcrumb-item"><a href="javascript:;">女鞋</a></li>
       <li class="breadcrumb-item active">所有商品</li>
     </ol>
   </nav>
 
-  <h1 class="title fs-7 py-2 mb-6">所有商品</h1>
+  <h1 class="title fs-7 py-2 mb-6 xs:mb-3">女鞋</h1>
 
   <div class="d-flex gap-6">
     <nav class="category-menu">
@@ -103,11 +102,11 @@
     <!-- infoBar -->
     
     
-      <section class="bg-primary-200 py-6 mt-12">
+      <section class="bg-primary-200 py-6">
   <div class="container">
-    <div class="d-flex justify-center items-center gap-6">
-      <h2 class="title fs-6">加入會員取得 9 折優惠</h2>
-      <a href="register.html" class="btn btn-neural-900">馬上註冊</a>
+    <div class="d-flex justify-center items-center gap-6 xs:gap-4">
+      <h2 class="title fs-6 xs:fs-5">加入會員取得 9 折優惠</h2>
+      <a href="signup.html" class="btn btn-neural-900 xs:btn-sm">馬上註冊</a>
     </div>
   </div>
 </section>
@@ -116,17 +115,17 @@
     <!-- footer -->
     <footer class="footer">
   <nav class="container">
-    <div class="nav d-flex justify-between items-center">
+    <div class="nav-content d-flex justify-between items-center gap-2 xs:flex-col xs:items-start">
       <a href="index.html">
         <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
       </a>
 
-      <ul class="pages">
+      <ul class="d-flex items-center gap-4 fw-medium xs:flex-col xs:items-start xs:gap-1">
         <li>
-          <a href="products.html">商品列表</a>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
         </li>
         <li>
-          <a href="story.html">品牌故事</a>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
         </li>
       </ul>
     </div>
