--- a/index.html
+++ b/index.html
@@ -4,34 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-ByKNHORd.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BKNN9bkA.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-Wd0I3DXt.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-DUKhlulM.css">
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="navbar">
-  <div class="container d-flex justify-between items-center py-4">
-    <div class="d-flex items-center gap-9">
-      <a href="index.html">
-        <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
-      </a>
+    <nav class="container d-flex justify-between items-center py-4 xs:py-3">
+  <div class="d-flex items-center gap-9">
+    <a href="index.html">
+      <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
+    </a>
 
-      <ul class="pages">
-        <li>
-          <a href="products.html">商品列表</a>
-        </li>
-        <li>
-          <a href="story.html">品牌故事</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+      <li>
+        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+      </li>
+      <li>
+        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+      </li>
+    </ul>
+  </div>
 
-    <div>
-      <a href="javascript:;" class="p-3">
-        <i class="bi bi-person fs-6"></i>
-      </a>
-    </div>
+  <div>
+    <a href="login.html" class="p-3">
+      <i class="bi bi-person fs-6"></i>
+    </a>
   </div>
 </nav>
 
@@ -46,17 +44,17 @@
     <!-- footer -->
     <footer class="footer">
   <nav class="container">
-    <div class="nav d-flex justify-between items-center">
+    <div class="nav-content d-flex justify-between items-center gap-2 xs:flex-col xs:items-start">
       <a href="index.html">
         <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
       </a>
 
-      <ul class="pages">
+      <ul class="d-flex items-center gap-4 fw-medium xs:flex-col xs:items-start xs:gap-1">
         <li>
-          <a href="products.html">商品列表</a>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
         </li>
         <li>
-          <a href="story.html">品牌故事</a>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
         </li>
       </ul>
     </div>
