--- a/product.html
+++ b/product.html
@@ -4,40 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platform 404｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-ByKNHORd.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BKNN9bkA.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-Wd0I3DXt.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-DUKhlulM.css">
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="navbar">
-  <div class="container d-flex justify-between items-center py-4">
-    <div class="d-flex items-center gap-9">
-      <a href="index.html">
-        <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
-      </a>
+    <nav class="container d-flex justify-between items-center py-4 xs:py-3">
+  <div class="d-flex items-center gap-9">
+    <a href="index.html">
+      <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
+    </a>
 
-      <ul class="pages">
-        <li>
-          <a href="products.html">商品列表</a>
-        </li>
-        <li>
-          <a href="story.html">品牌故事</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+      <li>
+        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+      </li>
+      <li>
+        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+      </li>
+    </ul>
+  </div>
 
-    <div>
-      <a href="javascript:;" class="p-3">
-        <i class="bi bi-person fs-6"></i>
-      </a>
-    </div>
+  <div>
+    <a href="login.html" class="p-3">
+      <i class="bi bi-person fs-6"></i>
+    </a>
   </div>
 </nav>
 
     <!-- page content -->
     <main class="product-main container">
-  <div class="d-flex items-start gap-6">
+  <div class="d-flex items-start gap-6 md:flex-col">
     <ul class="showcase">
       <li class="showcase-item">
         <img src="/URBNSTEP/assets/image-gISZDASy.png" alt="Platform 404 展示圖" />
@@ -66,8 +64,8 @@
     </ul>
 
     <div class="flex-grow-1">
-      <nav class="mb-3">
-        <ol class="breadcrumb">
+      <nav class="mb-3 xs:mb-2">
+        <ol class="breadcrumb xs:fs-3.5">
           <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
           <li class="breadcrumb-item"><a href="javascript:;">女鞋</a></li>
           <li class="breadcrumb-item"><a href="javascript:;">滑板鞋</a></li>
@@ -76,10 +74,10 @@
       </nav>
 
       <section class="mb-8">
-        <h1 class="title fs-8 mb-4">Platform 404</h1>
+        <h1 class="title fs-8 mb-4 xs:mb-3">Platform 404</h1>
 
-        <div class="d-flex items-center gap-2 mb-4">
-          <p class="title text-primary-400 fs-5">NT$2,600</p>
+        <div class="d-flex items-center gap-2 mb-4 xs:mb-3">
+          <p class="title text-primary-400 fs-5 xs:fs-4">NT$2,600</p>
           <p class="original-price">NT$3,200</p>
         </div>
 
@@ -94,7 +92,7 @@
         </div>
       </section>
 
-      <section class="mb-8">
+      <section class="mb-8 xs:mb-6">
         <h2 class="mb-2">顏色</h2>
 
         <ul class="d-flex flex-wrap gap-2">
@@ -109,7 +107,7 @@
         </ul>
       </section>
 
-      <section class="mb-12">
+      <section class="mb-12 xs:mb-6">
         <h2 class="mb-2">尺寸</h2>
 
         <ul class="d-flex flex-wrap gap-2 mb-2">
@@ -145,12 +143,15 @@
         <p class="text-danger-300 fs-3.5">僅剩 3 雙</p>
       </section>
 
-      <div class="d-flex items-center gap-2 mb-8">
-        <button type="button" class="btn btn-outline-neural-900 flex-grow-1">
+      <div class="d-flex items-center gap-2 mb-8 xs:flex-reverse">
+        <button type="button" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
           <i class="bi bi-heart"></i>加入收藏
         </button>
-        <button type="button" class="btn btn-neural-900 flex-grow-1">
-          <i class="bi bi-handbag"></i>加入收藏
+        <button type="button" class="d-none p-3 xs:d-block">
+          <i class="bi bi-heart fs-6"></i>
+        </button>
+        <button type="button" class="btn btn-neural-900 w-100 flex-grow-1">
+          <i class="bi bi-handbag"></i>門市預約試穿
         </button>
       </div>
 
@@ -185,7 +186,7 @@
   </div>
 </main>
 
-<section class="container py-12">
+<section class="container py-12 mb-10 xs:py-10 xs:mb-6">
   <h2 class="title fs-6 py-2 mb-4">你可能也喜歡...</h2>
   <ul id="relatedProductList" class="related-product-list"></ul>
 </section>
@@ -194,11 +195,11 @@
     <!-- infoBar -->
     
     
-      <section class="bg-primary-200 py-6 mt-12">
+      <section class="bg-primary-200 py-6">
   <div class="container">
-    <div class="d-flex justify-center items-center gap-6">
-      <h2 class="title fs-6">加入會員取得 9 折優惠</h2>
-      <a href="register.html" class="btn btn-neural-900">馬上註冊</a>
+    <div class="d-flex justify-center items-center gap-6 xs:gap-4">
+      <h2 class="title fs-6 xs:fs-5">加入會員取得 9 折優惠</h2>
+      <a href="signup.html" class="btn btn-neural-900 xs:btn-sm">馬上註冊</a>
     </div>
   </div>
 </section>
@@ -207,17 +208,17 @@
     <!-- footer -->
     <footer class="footer">
   <nav class="container">
-    <div class="nav d-flex justify-between items-center">
+    <div class="nav-content d-flex justify-between items-center gap-2 xs:flex-col xs:items-start">
       <a href="index.html">
         <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
       </a>
 
-      <ul class="pages">
+      <ul class="d-flex items-center gap-4 fw-medium xs:flex-col xs:items-start xs:gap-1">
         <li>
-          <a href="products.html">商品列表</a>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
         </li>
         <li>
-          <a href="story.html">品牌故事</a>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
         </li>
       </ul>
     </div>
