--- a/pages/index.html
+++ b/pages/index.html
@@ -1,1 +1,6 @@
-<%- include('./layout/default', { title: '首頁', content: 'contents/index' }) %>
+<%- include('./layout/default', {
+  title: '首頁',
+  content: 'contents/index',
+  showInfoBar: true,
+  showSmallPageLink: true
+}); %>
