--- a/story.html
+++ b/story.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>品牌故事｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-Wd0I3DXt.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-DUKhlulM.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-C5V6pmg7.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-CdMhhkNT.css">
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="container d-flex justify-between items-center py-4 xs:py-3">
-  <div class="d-flex items-center gap-9">
-    <a href="index.html">
-      <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
-    </a>
+    
+    <nav class="d-flex flex-col">
+  <div class="container w-100 d-flex justify-between items-center py-4 xs:py-3">
+    <div class="d-flex items-center gap-9">
+      <a href="index.html">
+        <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
+      </a>
 
-    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
-      <li>
-        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
-      </li>
-      <li>
-        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
-      </li>
-    </ul>
+      <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+        <li>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+        </li>
+        <li>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <a href="login.html" class="p-3">
+        <i class="bi bi-person fs-6"></i>
+      </a>
+    </div>
   </div>
 
-  <div>
-    <a href="login.html" class="p-3">
-      <i class="bi bi-person fs-6"></i>
-    </a>
-  </div>
+  
 </nav>
 
     <!-- page content -->
     <header class="story-hero">
   <picture>
-    <source media="(max-width: 575px)" srcset="/URBNSTEP/assets/hero-mobile-C0jQxOnr.png" />
+    <source media="(max-width: 575px)" srcset="/URBNSTEP/assets/hero-sm-C0jQxOnr.png" />
     <img class="hero-img" src="/URBNSTEP/assets/hero-_6_bIEC2.png" alt="橫幅" />
   </picture>
 
@@ -47,7 +52,6 @@
 </header>
 
 <main class="story-main container">
-  <!-- quote -->
   <section class="quote text-center xs:text-left">
     <h2 class="title fs-5 text-primary-400">走出城市的節奏，穿上自己的步調。</h2>
     <p>我們相信，每一雙鞋都該帶著個性出場。</p>
@@ -55,7 +59,6 @@
     <p>融合城市結構與機能語彙，我們打造適合都會節奏的風格鞋款，陪你自信穿梭每一場風景。</p>
   </section>
 
-  <!-- intro -->
   <img class="mb-6 xs:mb-4" src="/URBNSTEP/assets/about-hxZtk1pT.png" alt="URBNSTEP 街頭機能鞋" />
 
   <section class="section">
@@ -75,7 +78,6 @@
     </p>
   </section>
 
-  <!-- history -->
   <section class="history section">
     <h2 class="title">品牌歷程</h2>
     <ul>
@@ -85,7 +87,6 @@
     </ul>
   </section>
 
-  <!-- concept -->
   <section class="concept section">
     <h2 class="title">品牌理念</h2>
     <ul>
@@ -95,7 +96,6 @@
     </ul>
   </section>
 
-  <!-- story -->
   <section class="story section">
     <h2 class="title">品牌小故事</h2>
     <ul>
