--- a/products.html
+++ b/products.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>所有商品｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-Wd0I3DXt.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-DUKhlulM.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-C5V6pmg7.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-CdMhhkNT.css">
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="container d-flex justify-between items-center py-4 xs:py-3">
-  <div class="d-flex items-center gap-9">
-    <a href="index.html">
-      <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
-    </a>
+    
+    <nav class="d-flex flex-col">
+  <div class="container w-100 d-flex justify-between items-center py-4 xs:py-3">
+    <div class="d-flex items-center gap-9">
+      <a href="index.html">
+        <img src="/URBNSTEP/assets/logo-RhEl2I3y.svg" alt="logo" />
+      </a>
 
-    <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
-      <li>
-        <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
-      </li>
-      <li>
-        <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
-      </li>
-    </ul>
+      <ul class="d-flex items-center gap-4 fw-medium xs:d-none">
+        <li>
+          <a href="products.html" class="p-3 hover:text-neutral-600">商品列表</a>
+        </li>
+        <li>
+          <a href="story.html" class="p-3 hover:text-neutral-600">品牌故事</a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <a href="login.html" class="p-3">
+        <i class="bi bi-person fs-6"></i>
+      </a>
+    </div>
   </div>
 
-  <div>
-    <a href="login.html" class="p-3">
-      <i class="bi bi-person fs-6"></i>
-    </a>
-  </div>
+  
 </nav>
 
     <!-- page content -->
