--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-C5V6pmg7.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-CdMhhkNT.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-xMRLnd6c.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-hgUtE_mr.css">
   </head>
 
   <body>
@@ -242,10 +242,10 @@
       <li class="inspiration-item">
         <img src="/URBNSTEP/assets/inspiration-9-PBbdk4I8.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
-      <li class="md:d-none xs:d-block">
+      <li class="inspiration-item md:d-none xs:d-block">
         <img src="/URBNSTEP/assets/inspiration-11-DfL9ObnV.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
-      <li class="md:d-none xs:d-block">
+      <li class="inspiration-item md:d-none xs:d-block">
         <img src="/URBNSTEP/assets/inspiration-12-DuuNx5Rt.png" alt="URBNSTEP 機能鞋穿搭" />
       </li>
     </ul>
