--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platform 404｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-C5V6pmg7.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-CdMhhkNT.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-xMRLnd6c.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-hgUtE_mr.css">
   </head>
 
   <body>
@@ -149,15 +149,15 @@
       </section>
 
       <div class="d-flex items-center gap-2 mb-8 xs:flex-reverse">
-        <button type="button" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
+        <a href="collection.html" class="btn btn-outline-neural-900 w-100 flex-grow-1 xs:d-none">
           <i class="bi bi-heart"></i>加入收藏
-        </button>
-        <button type="button" class="d-none p-3 xs:d-block">
+        </a>
+        <a href="collection.html" class="d-none p-3 xs:d-block">
           <i class="bi bi-heart fs-6"></i>
-        </button>
-        <button type="button" class="btn btn-neural-900 w-100 flex-grow-1">
+        </a>
+        <a href="javascript:;" class="btn btn-neural-900 w-100 flex-grow-1">
           <i class="bi bi-handbag"></i>門市預約試穿
-        </button>
+        </a>
       </div>
 
       <section class="notice">
