--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-xMRLnd6c.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-hgUtE_mr.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-BpOxy2wV.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BuhSQx7B.css">
   </head>
 
   <body>
@@ -74,28 +74,32 @@
 
     <ul class="d-flex flex-wrap row-gap-10 column-gap-6 xs:row-gap-6 xs:column-gap-3">
       <li class="news-card card xs:card-sm">
-        <img src="/URBNSTEP/assets/new-1-DFuFJpu2.png" alt="Monoverse" class="card-img" />
-        <h3 class="title">Monoverse</h3>
-        <p class="price">NT$3,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/new-1-DFuFJpu2.png" alt="Monoverse" class="card-img" />
+          <h3 class="title">Monoverse</h3>
+          <p class="price">NT$3,600</p>
+        </a>
       </li>
       <li class="news-card card xs:card-sm">
-        <img src="/URBNSTEP/assets/new-2-BCvgVdcV.png" alt="PLATFORM 404" class="card-img" />
-        <h3 class="title">PLATFORM 404</h3>
-        <p class="price">NT$2,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/new-2-BCvgVdcV.png" alt="PLATFORM 404" class="card-img" />
+          <h3 class="title">PLATFORM 404</h3>
+          <p class="price">NT$2,600</p>
+        </a>
       </li>
       <li class="news-card card xs:card-sm">
-        <img src="/URBNSTEP/assets/new-3-DlHP5xvf.png" alt="URBN Force" class="card-img" />
-        <h3 class="title">URBN Force</h3>
-        <p class="price">NT$3,200</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/new-3-DlHP5xvf.png" alt="URBN Force" class="card-img" />
+          <h3 class="title">URBN Force</h3>
+          <p class="price">NT$3,200</p>
+        </a>
       </li>
       <li class="news-card card xs:card-sm">
-        <img src="/URBNSTEP/assets/new-4-1hP52Cz7.png" alt="Mode90" class="card-img" />
-        <h3 class="title">Mode90</h3>
-        <p class="price">NT$4,000</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/new-4-1hP52Cz7.png" alt="Mode90" class="card-img" />
+          <h3 class="title">Mode90</h3>
+          <p class="price">NT$4,000</p>
+        </a>
       </li>
     </ul>
   </section>
@@ -105,24 +109,28 @@
 
     <ul class="d-flex gap-6 md:gap-4 overflow-x-auto">
       <li class="hots-card position-relative">
-        <p class="badge">人氣 No.1</p>
-        <img src="/URBNSTEP/assets/product-3-AxvEbKOW.png" alt="Melty Kiss" class="card-img" />
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <p class="badge">人氣 No.1</p>
+          <img src="/URBNSTEP/assets/product-3-AxvEbKOW.png" alt="Melty Kiss" class="card-img" />
+        </a>
       </li>
       <li class="hots-card position-relative">
-        <p class="badge">人氣 No.1</p>
-        <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="Platform 404" class="card-img" />
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <p class="badge">人氣 No.1</p>
+          <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="Platform 404" class="card-img" />
+        </a>
       </li>
       <li class="hots-card position-relative">
-        <p class="badge">人氣 No.1</p>
-        <img src="/URBNSTEP/assets/product-6-D5PaxBWx.png" alt="R:UNER" class="card-img" />
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <p class="badge">人氣 No.1</p>
+          <img src="/URBNSTEP/assets/product-6-D5PaxBWx.png" alt="R:UNER" class="card-img" />
+        </a>
       </li>
       <li class="hots-card position-relative">
-        <p class="badge">人氣 No.1</p>
-        <img src="/URBNSTEP/assets/product-4-CqyUCYzf.png" alt="BOOMBLOK" class="card-img" />
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <p class="badge">人氣 No.1</p>
+          <img src="/URBNSTEP/assets/product-4-CqyUCYzf.png" alt="BOOMBLOK" class="card-img" />
+        </a>
       </li>
     </ul>
   </section>
@@ -161,49 +169,57 @@
     <h2 class="title">依系列選購</h2>
 
     <ul class="d-flex flex-wrap gap-6 xs:gap-3">
-      <li class="series-card position-relative d-flex justify-center items-center">
-        <img
-          src="/URBNSTEP/assets/product-6-D5PaxBWx.png"
-          alt="URBN RUNNER 慢跑系列"
-          class="w-100"
-        />
-        <h3 class="position-absolute title text-center text-white">
-          <span class="en d-block mb-2">URBN RUNNER</span
-          ><span class="d-block fs-6 xs:fs-4">慢跑系列</span>
-        </h3>
-        <a href="product.html" class="stretched-link"></a>
+      <li class="series-card">
+        <a href="product.html" class="d-flex justify-center items-center position-relative">
+          <img
+            src="/URBNSTEP/assets/product-6-D5PaxBWx.png"
+            alt="URBN RUNNER 慢跑系列"
+            class="w-100"
+          />
+          <h3 class="position-absolute title text-center text-white">
+            <span class="en d-block mb-2">URBN RUNNER</span
+            ><span class="d-block fs-6 xs:fs-4">慢跑系列</span>
+          </h3>
+        </a>
       </li>
-      <li class="series-card position-relative d-flex justify-center items-center">
-        <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="STREETMODE 滑板系列" class="w-100" />
-        <h3 class="position-absolute title text-center text-white">
-          <span class="en d-block mb-2">STREETMODE</span
-          ><span class="d-block fs-6 xs:fs-4">滑板系列</span>
-        </h3>
-        <a href="product.html" class="stretched-link"></a>
+      <li class="series-card">
+        <a href="product.html" class="d-flex justify-center items-center position-relative">
+          <img
+            src="/URBNSTEP/assets/product-ByIiOSCa.png"
+            alt="STREETMODE 滑板系列"
+            class="w-100"
+          />
+          <h3 class="position-absolute title text-center text-white">
+            <span class="en d-block mb-2">STREETMODE</span
+            ><span class="d-block fs-6 xs:fs-4">滑板系列</span>
+          </h3>
+        </a>
       </li>
-      <li class="series-card position-relative d-flex justify-center items-center">
-        <img
-          src="/URBNSTEP/assets/product-9-DL5QGtW6.png"
-          alt="CHUNK DISTRICT 厚底系列"
-          class="w-100"
-        />
-        <h3 class="position-absolute title text-center text-white">
-          <span class="en d-block mb-2">CHUNK DISTRICT</span
-          ><span class="d-block fs-6 xs:fs-4">厚底系列</span>
-        </h3>
-        <a href="product.html" class="stretched-link"></a>
+      <li class="series-card">
+        <a href="product.html" class="d-flex justify-center items-center position-relative">
+          <img
+            src="/URBNSTEP/assets/product-9-DL5QGtW6.png"
+            alt="CHUNK DISTRICT 厚底系列"
+            class="w-100"
+          />
+          <h3 class="position-absolute title text-center text-white">
+            <span class="en d-block mb-2">CHUNK DISTRICT</span
+            ><span class="d-block fs-6 xs:fs-4">厚底系列</span>
+          </h3>
+        </a>
       </li>
-      <li class="series-card position-relative d-flex justify-center items-center">
-        <img
-          src="/URBNSTEP/assets/product-1-BSd-Oeai.png"
-          alt="COLLAB ZONE 聯名企劃"
-          class="w-100"
-        />
-        <h3 class="position-absolute title text-center text-white">
-          <span class="en d-block mb-2">COLLAB ZONE</span
-          ><span class="d-block fs-6 xs:fs-4">聯名企劃</span>
-        </h3>
-        <a href="product.html" class="stretched-link"></a>
+      <li class="series-card">
+        <a href="product.html" class="d-flex justify-center items-center position-relative">
+          <img
+            src="/URBNSTEP/assets/product-1-BSd-Oeai.png"
+            alt="COLLAB ZONE 聯名企劃"
+            class="w-100"
+          />
+          <h3 class="position-absolute title text-center text-white">
+            <span class="en d-block mb-2">COLLAB ZONE</span
+            ><span class="d-block fs-6 xs:fs-4">聯名企劃</span>
+          </h3>
+        </a>
       </li>
     </ul>
   </section>
@@ -294,10 +310,11 @@
     <!-- template -->
     <template id="productCardTemp">
       <li class="card">
-        <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
-        <h2 class="title">PLATFORM 404</h2>
-        <p class="price">NT$2,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
+          <h2 class="title">PLATFORM 404</h2>
+          <p class="price">NT$2,600</p>
+        </a>
       </li>
     </template>
 
