--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platform 404｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-xMRLnd6c.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-hgUtE_mr.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-BpOxy2wV.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BuhSQx7B.css">
   </head>
 
   <body>
@@ -238,10 +238,11 @@
     <!-- template -->
     <template id="productCardTemp">
       <li class="card">
-        <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
-        <h2 class="title">PLATFORM 404</h2>
-        <p class="price">NT$2,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
+          <h2 class="title">PLATFORM 404</h2>
+          <p class="price">NT$2,600</p>
+        </a>
       </li>
     </template>
 
