--- a/story.html
+++ b/story.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>品牌故事｜URBNSTEP</title>
-    <script type="module" crossorigin src="/URBNSTEP/assets/main-xMRLnd6c.js"></script>
-    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-hgUtE_mr.css">
+    <script type="module" crossorigin src="/URBNSTEP/assets/main-BpOxy2wV.js"></script>
+    <link rel="stylesheet" crossorigin href="/URBNSTEP/assets/main-BuhSQx7B.css">
   </head>
 
   <body>
@@ -80,11 +80,11 @@
 
   <section class="history section">
     <h2 class="title">品牌歷程</h2>
-    <ul>
+    <ol>
       <li><time>2019</time>URBNSTEP 在台北東區的創意工作室誕生。</li>
       <li><time>2021</time>首款【Urban Flow 系列】誕生，結合針織鞋面與城市靈感。</li>
       <li><time>2025</time>URBNSTEP 已成為台灣街頭生活風格的代表鞋履品牌之一。</li>
-    </ul>
+    </ol>
   </section>
 
   <section class="concept section">
@@ -163,10 +163,11 @@
     <!-- template -->
     <template id="productCardTemp">
       <li class="card">
-        <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
-        <h2 class="title">PLATFORM 404</h2>
-        <p class="price">NT$2,600</p>
-        <a href="product.html" class="stretched-link"></a>
+        <a href="product.html">
+          <img src="/URBNSTEP/assets/product-ByIiOSCa.png" alt="PLATFORM 404" class="card-img" />
+          <h2 class="title">PLATFORM 404</h2>
+          <p class="price">NT$2,600</p>
+        </a>
       </li>
     </template>
 
